--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
+# MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/prepup
+spring.datasource.username=root
+spring.datasource.password=helloworld
+
+
+
+
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 server.port=8082
+
