--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/prepup
 spring.datasource.username=root
-spring.datasource.password=helloworld
+spring.datasource.password=		
 
 
 logging.level.org.springframework.web=INFO
