--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,18 @@
 # MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/prepup
 spring.datasource.username=root
-spring.datasource.password=helloworld
+spring.datasource.password=
 logging.level.org.springframework.web=INFO
 server.port=8082
 
+
+#Email Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username= 
-spring.mail.password=
+#Sender's Email and Password
+spring.mail.username=mintapp123@gmail.com 
+spring.mail.password=Prepup@123
+
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
