--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ server.port=8082
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username= 
-spring.mail.password=
+spring.mail.username=mintapp123@gmail.com
+spring.mail.password=Prepup@123
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
